--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ header-img: "img/1234.jpg"
 <!-- Chinese Version -->
 <div class="zh post-container">
     <blockquote>
-        坐标珠海，热爱前端和写作。
+        坐标珠三角，热爱表达和写作。
     </blockquote>
    
 </div>
