--- a/about.html
+++ b/about.html
@@ -14,7 +14,9 @@ header-img: "img/1234.jpg"
 <!-- Chinese Version -->
 <div class="zh post-container">
     <blockquote>
-        坐标珠三角，热爱阅读和写作。
+        写字的快乐并⾮来⾃表达，⽽来⾃这些⽂字所带来的改变——⽆论是对他人还是对⾃⼰，
+⽆论是对周遭还是对内⼼，都是如此。
+
     </blockquote>
    
 </div>
