--- a/about.html
+++ b/about.html
@@ -14,11 +14,12 @@ header-img: "img/1234.jpg"
 <!-- Chinese Version -->
 <div class="zh post-container">
     <blockquote>
-        写字的快乐并⾮来⾃表达，⽽来⾃这些⽂字所带来的改变——⽆论是对他人还是对⾃⼰，
-⽆论是对周遭还是对内⼼，都是如此。
-
+  一生想做浪漫极客
     </blockquote>
-   
+   <p>
+写字的快乐并⾮来⾃表达，⽽来⾃这些⽂字所带来的改变——⽆论是对他人还是对⾃⼰,
+⽆论是对周遭还是对内⼼，都是如此。
+   </p>>
 </div>
 
 <!-- English Version -->
