--- a/about.html
+++ b/about.html
@@ -16,10 +16,16 @@ header-img: "img/1234.jpg"
     <blockquote>
   一生想做浪漫极客
     </blockquote>
+    <p>
+    	我的女朋友在澳洲读书，我也正在努力学习英语。
+    </p>
    <p>
-写字的快乐并⾮来⾃表达，⽽来⾃这些⽂字所带来的改变——⽆论是对他人还是对⾃⼰,
-⽆论是对周遭还是对内⼼，都是如此。
+		我会随便写些东西记录生活，写字的快乐并⾮来⾃表达，⽽来⾃这些⽂字所带来的改变——⽆论是对他人还是对⾃⼰,⽆论是对周遭还是对内⼼，都是如此。
    </p>
+<p>
+		如果你恰好逛到了这里，希望你能喜欢这个博客。
+</p>
+
 </div>
 
 <!-- English Version -->
