--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ header-img: "img/1234.jpg"
   一生想做浪漫极客
     </blockquote>
     <p>
-    	我的女朋友在澳洲读书，我也正在努力学习英语。
+    	一个儒雅随和的小伙。
     </p>
    <p>
 		我会随便写些东西记录生活，写字的快乐并⾮来⾃表达，⽽来⾃这些⽂字所带来的改变——⽆论是对他人还是对⾃⼰,⽆论是对周遭还是对内⼼，都是如此。
