--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 title: Tags
 layout: default
-description: stay hungry stay foolish
+description: 一生想做浪漫极客
 header-img: "img/tag-bg.jpg"
 ---
 
