--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ header-img: "img/1234.jpg"
     	一个儒雅随和的小伙。
     </p>
    <p>
-		我会随便写些东西记录生活，写字的快乐并⾮来⾃表达，⽽来⾃这些⽂字所带来的改变——⽆论是对他人还是对⾃⼰,⽆论是对周遭还是对内⼼，都是如此。
+		我会随便写些东西记录生活，写字的快乐并非来自表达，而来⾃这些文字所带来的改变——无论是对他人还是对自己,无论是对周遭还是对内心，都是如此。
    </p>
 <p>
 		如果你恰好逛到了这里，希望你能喜欢这个博客。
