--- a/about.html
+++ b/about.html
@@ -16,11 +16,8 @@ header-img: "img/1234.jpg"
     <blockquote>
   一生想做浪漫极客
     </blockquote>
-    <p>
-    	一个儒雅随和的小伙。
-    </p>
    <p>
-		我会随便写些东西记录生活，写字的快乐并非来自表达，而来⾃这些文字所带来的改变——无论是对他人还是对自己,无论是对周遭还是对内心，都是如此。
+		写字的快乐并非来自表达，而来⾃这些文字所带来的改变——无论是对他人还是对自己,无论是对周遭还是对内心，都是如此。
    </p>
 <p>
 		如果你恰好逛到了这里，希望你能喜欢这个博客。
