--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is BigBangBro."
+description: "Just laugh, everybody."
 header-img: "img/1234.jpg"
 ---
 
@@ -14,7 +14,7 @@ header-img: "img/1234.jpg"
 <!-- Chinese Version -->
 <div class="zh post-container">
     <blockquote>
-  一生想做浪漫极客
+  “大家笑一笑就好”
     </blockquote>
    <p>
 		写字的快乐并非来自表达，而来⾃这些文字所带来的改变——无论是对他人还是对自己,无论是对周遭还是对内心，都是如此。
