--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Premature optimization is the root of all evil"
+description: "一剑封喉。"
 ---
 
 {% for post in paginator.posts %}
