--- a/about.html
+++ b/about.html
@@ -14,17 +14,17 @@ header-img: "img/1234.jpg"
 <!-- Chinese Version -->
 <div class="zh post-container">
     <blockquote>
-  “我是无名之辈”
+  “莫欺无名之辈”
     </blockquote>
    <p>
-		搬运文字的目的并非要对抗什么，而是希望这些文字能给浮躁的环境带来些许改变————无论是对他人还是对自己,无论是对周遭还是对内心，都是如此。
+		搬运「消失的文字」的目的并非要对抗什么，而是希望这些文字能给浮躁的环境带来些许改变————无论是对他人还是对自己,无论是对周遭还是对内心，都是如此。
    </p>
 <p>
-		如果你恰好逛到了这里，希望你能喜欢这个博客。
+		如果你恰好逛到了这里，希望你能喜欢这些「消失的文字」。
 </p>
 
 <p>
-       本站不接受任何投稿。我不是七落锁，我只是那些消失的文字的搬运工。 
+       本站不接受任何投稿。我不是七落锁，我只是「消失的文字」的搬运工。 
 </p>
 </div>
 
