--- a/about.html
+++ b/about.html
@@ -24,7 +24,10 @@ header-img: "img/1234.jpg"
 </p>
 
 <p>
-       本站不接受任何投稿。我不是七落锁，我只是「消失的文字」的搬运工。 
+       本站不接受任何投稿。
+</p>
+<p>
+       我不是七落锁，我只是「消失的文字」的搬运工。 
 </p>
 </div>
 
