--- a/about.html
+++ b/about.html
@@ -34,16 +34,13 @@ header-img: "img/1234.jpg"
 <!-- English Version -->
 <div class="en post-container">
     <blockquote>
-        Designer or Engineer, things in between.
+        Great works are accomplished not by strength, but by perseverance.
     </blockquote>
 
     <p>
-        Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. And the only way to do great work is to love what you do. If you haven’t found it yet, keep looking. Don’t settle. As with all matters of the heart, you’ll know when you find it.
+        Your time is limited, so don't waste it living someone else's life. Don't be trapped by dogma - which is living with the results of other people's thinking. Don't let the noise of other's opinions drown out your own inner voice. And most important, have the courage to follow your heart and intuition. They somehow already know what you truly want to become. Everything else is secondary.
     </p>
 
-    <p>
-    If you want to live your life in a creative way, as an artist, you have to not look back too much. You have to be willing to take whatever you’ve done and whoever you were and throw them away.
-    </p>
 
     <p style="text-align:right;">
     -- Steve Jobs
