--- a/about.html
+++ b/about.html
@@ -38,10 +38,12 @@ header-img: "img/1234.jpg"
     </blockquote>
 
     <p>
-        Your time is limited, so don't waste it living someone else's life. Don't be trapped by dogma - which is living with the results of other people's thinking. Don't let the noise of other's opinions drown out your own inner voice. And most important, have the courage to follow your heart and intuition. They somehow already know what you truly want to become. Everything else is secondary.
+        Your time is limited, so don't waste it living someone else's life. Don't be trapped by dogma - which is living with the results of other people's thinking. Don't let the noise of other's opinions drown out your own inner voice. And most important, have the courage to follow your heart and intuition. 
     </p>
+<p>
+They somehow already know what you truly want to become. Everything else is secondary.
 
-
+ </p>
     <p style="text-align:right;">
     -- Steve Jobs
     </p>
