--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@ header-img: "img/1234.jpg"
        本站不接受任何投稿。
 </p>
 <p>
-       我不是七落锁，我只是「消失的文字」的搬运工。 
+       我不是七落索，我只是「消失的文字」的搬运工。 
 </p>
 </div>
 
