--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Just laugh, everybody."
+description: "laugh at everybody."
 header-img: "img/1234.jpg"
 ---
 
