--- a/about.html
+++ b/about.html
@@ -27,7 +27,10 @@ header-img: "img/1234.jpg"
        本站不接受任何投稿。
 </p>
 <p>
-       我不是七落索，我只是「消失的文字」的搬运工。 
+       在此鸣谢（排名不分先后）：jekyll,七落索,Gitlab，Amazon Web Service 。正所谓前人栽树，后人乘凉，没有你们就没有这个网站。
+</p> 
+<p>
+       至于我是谁，我只是「消失的文字」的搬运工。 
 </p>
 </div>
 
