--- a/about.html
+++ b/about.html
@@ -27,10 +27,10 @@ header-img: "img/1234.jpg"
        本站不接受任何投稿。
 </p>
 <p>
-       在此鸣谢（排名不分先后）：Linus Torvalds,jekyll,七落索,Gitlab,AWS 
+       特别鸣谢以下单位和个人（排名不分先后）：Linus Torvalds,jekyll,七落索,Gitlab. 
 </p> 
 <p>
-       正所谓前人栽树，后人乘凉，没有你们就没有这个网站,你们的存在使得这个世界变得更好了一点。 
+       你们的存在使得这个世界变得更好了一点。 前人栽树，后人乘凉，没有你们也就没有这个网站。
 </p>
 <p>
        至于我是谁，我只是「消失的文字」的搬运工。 
