--- a/about.html
+++ b/about.html
@@ -20,14 +20,14 @@ header-img: "img/1234.jpg"
 		搬运「消失的文字」的目的并非要对抗什么，而是希望这些文字能给浮躁的环境带来些许改变————无论是对他人还是对自己,无论是对周遭还是对内心，都是如此。
    </p>
 <p>
-		如果你恰好逛到了这里，希望你能喜欢这些「消失的文字」。
+		如果你恰好逛到了这里，希望你能喜欢并分享这些「消失的文字」。
 </p>
 
 <p>
        本站不接受任何投稿。
 </p>
 <p>
-       本站基于jekyll模板构建。在此特别鸣谢以下单位和个人（排名不分先后）：Linus Torvalds,七落索,Gitlab. 
+       本站基于jekyll构建。在此特别鸣谢以下单位和个人（排名不分先后）：Microsoft;Gitlab;Linus Torvalds;七落索. 
 </p> 
 <p>
        前人栽树，后人乘凉，你们的存在使得这个世界变得更好了一点。 
