--- a/about.html
+++ b/about.html
@@ -27,8 +27,11 @@ header-img: "img/1234.jpg"
        本站不接受任何投稿。
 </p>
 <p>
-       本站基于jekyll构建。在此特别鸣谢以下单位和个人（排名不分先后）：Microsoft;Gitlab;Linus Torvalds;七落索. 
+       本站基于jekyll构建。在此特别鸣谢以下单位和个人（排名不分先后）：
 </p> 
+<p>
+      Microsoft;Gitlab;Linus Torvalds;七落索.  
+</p>
 <p>
        前人栽树，后人乘凉，你们的存在使得这个世界变得更好了一点。 
 </p>
