--- a/about.html
+++ b/about.html
@@ -17,6 +17,9 @@ header-img: "img/1234.jpg"
   “莫欺无名之辈”
     </blockquote>
    <p>
+       本站不接受任何投稿。
+</p>
+   <p>
 		搬运「消失的文字」的目的并非要对抗什么，而是希望这些文字能给浮躁的环境带来些许改变————无论是对他人还是对自己,无论是对周遭还是对内心，都是如此。
    </p>
 <p>
@@ -24,10 +27,7 @@ header-img: "img/1234.jpg"
 </p>
 
 <p>
-       本站不接受任何投稿。
-</p>
-<p>
-       本站基于jekyll构建。在此特别鸣谢以下单位和个人（排名不分先后）：
+       本站基于jekyll构建。在此鸣谢以下单位和个人（排名不分先后）：
 </p> 
 <p>
       Microsoft;Gitlab;Linus Torvalds;七落索.  
