--- a/about.html
+++ b/about.html
@@ -27,10 +27,10 @@ header-img: "img/1234.jpg"
 </p>
 
 <p>
-       本站基于jekyll构建，在此鸣谢以下单位和个人（排名不分先后）：
+       本站基于jekyll构建，借此鸣谢以下单位和个人（排名不分先后）：
 </p> 
 <p>
-      Microsoft;Gitlab pages;Linus Torvalds;@七落索.  
+      Jascha Heifetz;Linus Torvalds;Johann Sebastian Bach;huxpro;Nathan Milstein;Franz Liszt;Microsoft;robert schumann;Gitlab pages;@七落索.  
 </p>
 <p>
        前人栽树，后人乘凉，你们的存在使得这个世界变得更好了一点。 
