--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@ header-img: "img/1234.jpg"
        本站基于jekyll构建，借此鸣谢以下单位和个人（排名不分先后）：
 </p> 
 <p>
-      Jascha Heifetz;Linus Torvalds;huangxuanhuxpro;Nathan Milstein;Franz Liszt;Microsoft;robert schumann;Gitlab pages;@七落索.  
+      Jascha Heifetz;Linus Torvalds;huangxuanhuxpro;Nathan Milstein;Franz Liszt;Microsoft;Robert schumann;Gitlab Pages;@七落索.  
 </p>
 <p>
        前人栽树，后人乘凉，你们的存在使得这个世界变得更好了一点。 
