--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ header-img: "img/1234.jpg"
   “莫欺无名之辈”
     </blockquote>
    <p>
-       本站不接受任何投稿。
+       本站不接受任何投稿，纯搬运。
 </p>
    <p>
 		搬运「消失的文字」的目的并非要对抗什么，而是希望这些文字能给浮躁的环境带来些许改变————无论是对他人还是对自己,无论是对周遭还是对内心，都是如此。
@@ -30,13 +30,13 @@ header-img: "img/1234.jpg"
        本站基于jekyll构建，借此鸣谢以下单位和个人（排名不分先后）：
 </p> 
 <p>
-      Jascha Heifetz;Linus Torvalds;huangxuanhuxpro;Nathan Milstein;Franz Liszt;Microsoft;Robert schumann;Gitlab Pages;@七落索.  
+      Jascha Heifetz;</n> Linus Torvalds;huangxuanhuxpro;Nathan Milstein;Franz Liszt;Microsoft;Robert schumann;Gitlab Pages;七落索.  
 </p>
 <p>
-       前人栽树，后人乘凉，你们的存在使得这个世界变得更好了一点。 
+       前人栽树，后人乘凉，你们的存在使得这个世界变得更好了一点，谢谢。 
 </p>
 <p>
-       至于我是谁，我只是「消失的文字」的搬运工。 
+
 </p>
 </div>
 
