--- a/about.html
+++ b/about.html
@@ -27,12 +27,12 @@ header-img: "img/1234.jpg"
 </p>
 
 <p>
-       本站基于jekyll构建，借此鸣谢以下单位和个人（排名不分先后）：
+       本站基于jekyll构建，借此鸣谢以下单位和个人（排名不分先后）：</br>
 
-      Jascha Heifetz</br> Linus Torvalds</br>huangxuanhuxpro</br>Hesenberg</br>Nathan Milstein</br>Franz Liszt</br>Microsoft</br>Robert schumann</br>Gitlab Pages</br>七落索  
+      Jascha Heifetz</br> Linus Torvalds</br>huangxuanhuxpro</br>Hesenberg</br>Nathan Milstein</br>Franz Liszt</br>Robert schumann</br>Gitlab Pages</br> Albert Camus </br> Sisyphus</br>七落索  
 </p>
 <p>
-       前人栽树，后人乘凉，你们的存在使得这个世界变得更好了一点，谢谢。 
+       前人栽树，后人乘凉，谢谢你们让这个世界变得更好了一点。 
 </p>
 <p>
 
