--- a/about.html
+++ b/about.html
@@ -27,8 +27,9 @@ header-img: "img/1234.jpg"
 </p>
 
 <p>
-       本站基于jekyll构建，借此鸣谢以下单位和个人（排名不分先后）：</br>
-
+       本站基于jekyll构建，借此鸣谢以下单位和个人（排名不分先后）：
+       </p>
+<p>
       Jascha Heifetz</br> Linus Torvalds</br>huangxuanhuxpro</br>Hesenberg</br>Nathan Milstein</br>Franz Liszt</br>Robert schumann</br>Gitlab Pages</br> Albert Camus </br> Sisyphus</br>七落索  
 </p>
 <p>
