--- a/about.html
+++ b/about.html
@@ -27,10 +27,11 @@ header-img: "img/1234.jpg"
 </p>
 
 <p>
-       本站基于jekyll构建，模板由huangxuanhuxpro开源，借此鸣谢以下单位和个人（排名不分先后）：
+       本站基于jekyll构建，借此鸣谢以下单位和个人（排名不分先后）：
        </p>
-<p>
-      Jascha Heifetz</br> Linus Torvalds</br></br>Hesenberg</br>Nathan Milstein</br>Franz Liszt</br>Robert schumann</br>Gitlab Pages</br>Steve Jobs</br> Albert Camus </br> Sisyphus</br>七落索  
+<p> <center>
+      Jascha Heifetz</br> Linus Torvalds</br>Hesenberg</br>Nathan Milstein</br>Franz Liszt</br>Robert schumann</br>Gitlab Pages</br>Steve Jobs</br> Albert Camus </br> Sisyphus</br>七落索  
+      </center>
 </p>
 <p>
        前人栽树，后人乘凉，谢谢你们让这个世界变得更好了一点。 
