--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@ header-img: "img/1234.jpg"
       </center>
 </p>
 <p>
-       前人栽树，后人乘凉，谢谢你们让这个世界变得更好了一点。 
+       前人栽树，后人乘凉，你们的存在让这个世界变得更好了一点。 
 </p>
 <p>
 
