--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@ header-img: "img/1234.jpg"
        本站基于jekyll构建，借此鸣谢以下单位和个人（排名不分先后）：   
        </p>
 <p> <center>
-      Jascha Heifetz</br> Linus Torvalds</br>huangxuanhupro</br>Hesenberg</br>Nathan Milstein</br>Franz Liszt</br>Robert schumann</br>Gitlab Pages</br>Steve Jobs</br> Albert Camus </br> Sisyphus</br>七落索  
+      Jascha Heifetz</br> Linus Torvalds</br>huangxuanhupro</br>Hesenberg</br>Elon Musk</br>Franz Liszt</br>Robert schumann</br>Gitlab Pages</br>Steve Jobs</br> Albert Camus </br> Sisyphus</br>七落索  
       </center>
 </p>
 <p>
