--- a/about.html
+++ b/about.html
@@ -17,10 +17,10 @@ header-img: "img/1234.jpg"
   “莫欺无名之辈”
     </blockquote>
    <p>
-       本站不接受任何投稿，纯搬运。
+       本站不接受任何投稿，只做搬运。
 </p>
    <p>
-		搬运「消失的文字」的目的并非要对抗什么，而是希望这些文字能给浮躁的环境带来些许改变————无论是对他人还是对自己,无论是对周遭还是对内心，都是如此。
+		互联网是有记忆的。搬运这些文字的目的并非要对抗什么，而是希望这些文字能给浮躁的环境带来些许改变————无论是对他人还是对自己,无论是对周遭还是对内心，都是如此。
    </p>
 <p>
 		如果你恰好逛到了这里，希望你能喜欢并分享这些「消失的文字」。
@@ -36,9 +36,9 @@ header-img: "img/1234.jpg"
 <p>
        前人栽树，后人乘凉，你们的存在让这个世界变得更好了一点。 
 </p>
-<p>
-
-</p>
+<p style="text-align:right;">
+    -- 一名普通网友
+    </p>
 </div>
 
 <!-- English Version -->
