--- a/about.html
+++ b/about.html
@@ -36,8 +36,11 @@ header-img: "img/1234.jpg"
 <p>
        前人栽树，后人乘凉，你们的存在让这个世界变得更好了一点。 
 </p>
+<p>
+       很惭愧，我只做了一点微小的工作。
+</p>
 <p style="text-align:right;">
-    -- 一名普通网友
+    一名普通网友
     </p>
 </div>
 
