--- a/about.html
+++ b/about.html
@@ -40,7 +40,8 @@ header-img: "img/1234.jpg"
        很惭愧，我只做了一点微小的工作。
 </p>
 <p style="text-align:right;">
-    一名普通网友
+    write from nobody
+
     </p>
 </div>
 
