--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@ header-img: "img/1234.jpg"
        很惭愧，我只做了一点微小的工作。
 </p>
 <p style="text-align:right;">
-    write from nobody
+    --write from nobody
 
     </p>
 </div>
