--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Always remember."
+description: "Just laugh, everybody."
 header-img: "img/1234.jpg"
 ---
 
@@ -14,50 +14,31 @@ header-img: "img/1234.jpg"
 <!-- Chinese Version -->
 <div class="zh post-container">
     <blockquote>
-  “莫欺无名之辈”
+  “大家笑一笑就好”
     </blockquote>
    <p>
-       本站不接受任何投稿，只做搬运。
-</p>
-   <p>
-		互联网是有记忆的。搬运这些文字的目的并非要对抗什么，而是希望这些文字能给浮躁的环境带来些许改变————无论是对他人还是对自己,无论是对周遭还是对内心，都是如此。
+		写字的快乐并非来自表达，而来⾃这些文字所带来的改变——无论是对他人还是对自己,无论是对周遭还是对内心，都是如此。
    </p>
 <p>
-		如果你恰好逛到了这里，希望你能喜欢并分享这些「消失的文字」。
+		如果你恰好逛到了这里，希望你能喜欢这个博客。
 </p>
 
-<p>
-       本站基于jekyll构建，借此鸣谢以下单位和个人（排名不分先后）：   
-       </p>
-<p> <center>
-      Jascha Heifetz</br> Linus Torvalds</br>huangxuanhupro</br>Hesenberg</br>Elon Musk</br>Franz Liszt</br>Robert schumann</br>Gitlab Pages</br>Steve Jobs</br> Albert Camus </br> Sisyphus</br>qiluosuo  
-      </center>
-</p>
-<p>
-       前人栽树，后人乘凉，你们的存在让这个世界变得更好了一点。 
-</p>
-<p>
-       很惭愧，我只做了一点微小的工作。
-</p>
-<p style="text-align:right;">
-    --write from nobody
-
-    </p>
 </div>
 
 <!-- English Version -->
 <div class="en post-container">
     <blockquote>
-        Great works are accomplished not by strength, but by perseverance.
+        Designer or Engineer, things in between.
     </blockquote>
 
     <p>
-        Your time is limited, so don't waste it living someone else's life. Don't be trapped by dogma - which is living with the results of other people's thinking. Don't let the noise of other's opinions drown out your own inner voice. And most important, have the courage to follow your heart and intuition. 
+        Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. And the only way to do great work is to love what you do. If you haven’t found it yet, keep looking. Don’t settle. As with all matters of the heart, you’ll know when you find it.
     </p>
-<p>
-They somehow already know what you truly want to become. Everything else is secondary.
 
- </p>
+    <p>
+    If you want to live your life in a creative way, as an artist, you have to not look back too much. You have to be willing to take whatever you’ve done and whoever you were and throw them away.
+    </p>
+
     <p style="text-align:right;">
     -- Steve Jobs
     </p>
@@ -98,7 +79,7 @@ They somehow already know what you truly want to become. Everything else is seco
 <!-- 多说评论框 end -->
 
 <!-- Duoshuo hacking -->
-<input id="dsUser" type="hidden" value="{{site.duoshuo_username}}"  />   
+<input id="dsUser" type="hidden" value="{{site.duoshuo_username}}"  />
 
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
